updated trip service